2008-02-04  Daniel Morales  <daniminas@gmail.com>

	* data/preferences_dialog.glade:
	* data/twitux.schemas.in:
	* src/twitux-parser.c:
	* src/twitux-preferences.c:
	* src/twitux.h: Add preference to show user names ore
	real names

2008-01-19  Daniel Morales  <daniminas@gmail.com>

	* src/twitux-network.c: add 'source' param to get 'from twitux'
	on twitter web.

2008-01-13  Brian Pepple  <bpepple@fedoraproject.org>

	* data/account_dialog.glade:
	* data/main_window.glade:
	* data/send_message_dialog.glade:
	* data/Makefile.am:
	* data/add_friend_dialog.glade:
	* data/spell_dialog.glade:
	* data/preferences_dialog.glade:
	* data/tray_menu.glade:
	* po/POTFILES.in:
	* src/twitux-account-dialog.c:
	* src/twitux-preferences.c:
	* src/twitux-send-message-dialog.c:
	* src/twitux-spell-dialog.c:
	* src/twitux-app.c:
	* src/twitux-add-dialog.c: split out glade files to make eventual gtkbuilder
	transition easier.

	* data/main.glade: removed file.

2007-12-30  Brian Pepple  <bpepple@fedoraproject.org>

	* configure.in:
	* NEWS: Bump version.

2007-12-30  Daniel Morales  <daniminas@gmail.com>

	* Release 0.60.
	
2007-12-17  Daniel Morales  <daniminas@gmail.com>

	* data/main.glade
	* src/twitux-app.[ch]:
	* src/twitux-tweet-list.c:
	* src/twitux-label.[ch]: Expand tweets in the libsexy label.
	* Close Bug #1781507: Wrong address for the FSF in license statements

2007-12-10  Daniel Morales  <daniminas@gmail.com>

	* data/main.glade:
	* src/twitux-send-direct-messages.[ch]:
	* src/twitux-network.c:
	* src/twitux-app.c: Add support to send direct messages.

2007-11-08  Daniel Morales  <daniminas@gmail.com>

	* src/twitux-label.[ch]: Add initial code to support URLs and @nicknames
	using libsexy.

2007-10-26  Daniel Morales  <daniminas@gmail.com>

	* src/twitux-network.c: Minor correction on network code.
	* src/twitux-app.c: Retrieve Twitux timeline.

2007-10-20  Brian Pepple  <bpepple@fedoraproject.org>

	* configure.in: 
	* libtwitux/Makefile.am: